alignments fixed

--- a/src/blocks/block-grid-container/styles/editor.scss
+++ b/src/blocks/block-grid-container/styles/editor.scss
@@ -453,8 +453,9 @@ body .edit-post-layout .editor-styles-wrapper .c9-grid .container-narrow:not(:fi
 
 	body:not(.folded) .edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .container[data-align="wide"],
 	body.folded .edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .container[data-align="wide"] {
-		width: 1200px;
-		max-width: 100%;
+		width: 120%;
+		margin-left: 0;
+		margin-right: 0;
 	}
 
 	body:not(.folded) .is-sidebar-opened .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .container[data-align="wide"],
@@ -466,8 +467,8 @@ body .edit-post-layout .editor-styles-wrapper .c9-grid .container-narrow:not(:fi
 	body:not(.folded) .edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .container-fluid[data-align="full"],
 	body.folded .edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .container-fluid[data-align="full"],
 	body.folded .is-sidebar-opened .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .container-fluid[data-align="full"] {
-		margin-left: auto;
-		margin-right: auto;
+		margin-left: 0;
+		margin-right: 0;
 	}
 
 	// Admin open. Inspector open.
@@ -477,22 +478,20 @@ body .edit-post-layout .editor-styles-wrapper .c9-grid .container-narrow:not(:fi
 
 	// Admin closed. Inspector open.
 	body.folded .is-sidebar-opened .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .container-fluid[data-align="full"] {
-		max-width: none;
+		max-width: calc(100vw - 280px);
 		width: 100%;
-		min-width: 1200px;
 	}
 
 	// Admin open. Inspector closed.
 	body:not(.folded) .edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .container-fluid[data-align="full"] {
-		max-width: none;
+		max-width: calc(100vw - 116px);
 		width: 100%;
 	}
 
 	// Admin closed. Inspector closed.
 	body.folded .edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .container-fluid[data-align="full"] {
-		max-width: none;
+		max-width: calc(100vw - 116px);
 		width: 100%;
-		min-width: 1260px;
 	}
 
 	body .edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .c9-grid .container-fluid.wp-block[data-align="full"]>.wp-block-edit,
